--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,12 @@
 }
 body{
   font-family: 'Poppins', sans-serif;
+
 }
 
 .navbar {
   width: 100%;
-  height: 120px;
+  height: 90px;
   display: flex;
   flex-direction: column;
 
@@ -21,10 +22,17 @@ body{
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+   padding: 10px 20px;
+  transition: all 0.3s ease;
   background-color: #000000;
   color: white;
-  z-index: 2;
+
+}
+
+
+.TopVar.hide {
+  transform: translateY(-100%); /* upar slide ho jaayega */
+  transition: transform 0.3s ease;
 }
 .first-div{
   width: 33.33%;
@@ -77,7 +85,7 @@ body{
         font-weight: 500;
         padding: 12px 0;
         text-align: center;
-        z-index: -1;
+        z-index: 10001;
         overflow: hidden;
 }
 .slides-slow h1{
@@ -149,15 +157,27 @@ body{
   /* margin-right: 10px; */
 }
 .Header{
+   position: relative; /* normal flow me */
   width: 100%;
-  height: 60px;
+  background: #fff;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
-  background-color: #ffffff;
-  color: #000000;
+  align-items: center;
+  
+  text-align: center;
+  transition: all 0.3s ease;
+  z-index: 1000;
+}
+.Header.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+transition: all 0.3s ease;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+border-bottom: 1px solid #a3a2a2;
+ 
+  
+
 }
 .home{
   display: flex;
@@ -177,6 +197,9 @@ body{
 }
 .menu{
   display: flex;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 10px;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -558,7 +581,7 @@ fontawesome {
 .bottom-btn:hover{
       background: #ff4d4d;
 }
-  .product-sale:hover .bottom-btn{
+.product-sale:hover .bottom-btn{
      bottom: 20px;
       opacity: 1;
     }
