--- a/src/pages/productData.css
+++ b/src/pages/productData.css
@@ -7,15 +7,14 @@ body{
     gap: 8px;
 }
 .right-details {
+  width: 50vw;
   background-color: #fff;
   border: 1px solid #e0e0e0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 20px;
   gap: 15px;
-  position: sticky;
-  top: 50px;
-  z-index: 10;
+ 
 }
 .right-details h1{
     font-size: 2rem;
@@ -27,31 +26,38 @@ body{
     font-weight: 300;
     color: gray;
 }
+.main-container{
+  display: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;   
+}
 .left-image{
-    background-color: #fff;
-  border: 1px solid #e0e0e0;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  padding: 20px;
+  background-color: #fff;
+  padding: 10px;
+  height: 600px;
+  position: sticky;
+  top: 50px;
 
 }
 .addToCart{
     font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #fff;
-    width: 300px;
-    height: 70px;
-background-color: #5cf703;
+    width: 350px;
+    height: 50px;
+background-color: #000000;
   border: 1px solid #e0e0e0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 20px;
   padding: 10px;
+ cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
-.addToCart:hover{
-    color: white;
-    background-color: black;
-    
-  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.747);
-}
+
 .delivery{
     border: 1px solid black;
     padding: 20px;
@@ -64,12 +70,13 @@ background-color: #5cf703;
 .delivery ul li{
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 20px;
 }
 .delivery ul li h1{
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 400;
-    color: rgb(61, 61, 61);
+    color: rgb(43, 42, 42);
 }
 .delivery ul hr {
   width: 90%;
@@ -77,4 +84,36 @@ background-color: #5cf703;
   border: none;
   border-top: 1px dashed #888686;
   
+}
+.BuyButton{
+  
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border-radius: 30px;
+}
+.size-button {
+  width: 50px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  background: #f9f9f9;
+  transition: all 0.3s ease;
+}
+
+.size-button:hover {
+  background: black;
+  color: white;
+}
+
+.size-button.active {
+  background: #000000;
+  color: white;
+  border: 1px solid #000000;
 }
