--- a/src/App.css
+++ b/src/App.css
@@ -1464,7 +1464,7 @@ hr{
     background-attachment: scroll; 
     background-size: cover; 
     background-position: center ; 
-}
+  }
 
 .section-text1{
   display: flex;
@@ -1506,6 +1506,146 @@ hr{
 }
 
 .section7{
+  /* display: none; */
+  padding: 10px;
+  justify-content: center;
+}
+.section7-slider{
   display: none;
+}
+.mobile-section7-slider{
+  width: 90%;
+  padding: 20px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: white;
+}
+.mobile-section7-slider p{
+  font-size: 0.80rem;
+  font-weight: 400;
+  color: #444343;
+}
+.section9{
+  display: none;
+}
+.mobile-section9{
+  display: flex;
+}
+.section-footer{
+  display: none;
+}
+.footer{
+  width: 100%;
+  height: 100vh;
+}
+.mobile-section-footer{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+
+}
+.footer-first{
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  gap: 20px;
+}
+.footer-second{
+  width: 100%;
+  transition: height 0.3s ease; 
+  overflow: hidden;
+  padding: 10px;
+  justify-content: flex-start;
+  
+  /* background-color: #afaeae;
+  border-radius: 20px; */
+  color: #ffffff
+}
+.copyRight{
+  width: 100%;
+  padding: 20px;
+}
+.left-container-scroll-block h1{
+    color: #fff;
+}
+.left-container-scroll-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.left-container-scroll-block h1 {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin: 0;
+    color: #1b1b1b;
+}
+
+.left-container-scroll-block-cond {
+    font-size: 18px;
+}
+.section-icon-nav{
+  padding: 10px;
+  height: 200px;
+  margin-top: -20px;
+}
+
+.section-icon-nav ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0;
+    margin: 0;
+}
+.section-icon-nav ul li{
+    font-size: 1rem;
+    color: #000000;
+    cursor: pointer;
+    
+}
+  .footer-first-texts{
+    width: 100%;
+    gap: 20px;
+    margin-top: -20px;
+  }
+  .section-btn-footer input{
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
+  color: #000000;
+  border: 1px solid #bebbbb;
+  background-color: #ffffff17;
+  font-size: 1rem;
+
+  padding: 20px;
+}
+.section-btn-footer input::placeholder{
+  color: #afadad;
+  font-size: 0.90rem;
+  font-weight: 400;
+}
+.section-btn-footer input:focus{
+  outline: none;
+  border: 1px solid #242323;
+  background-color: #ffffff;
+}
+.section-text-p p{
+  font-size: 0.80rem;
+}
+.section-icon-footer-social{
+  gap: 20px;
+  align-items: flex-start;
+   margin-left: -10px;
+}
+.section-icon-footer-social i{
+  font-size: 1.2rem;
+  
+ 
+  padding: 10px;
+  
 }
 }
